<?xml version="1.0"?>
<package format="3">
  <name>robot_arm_controller</name>
  <version>0.0.1</version>
  <description>GUI для управления UR5 в Gazebo</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>PyQt6</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
